k8s/istio/yas-dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: yas-gateway
  namespace: yas-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - storefront.yas.local
        - backoffice.yas.local
        - swagger.yas.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yas-web
  namespace: yas-dev
spec:
  hosts:
    - storefront.yas.local
    - backoffice.yas.local
    - swagger.yas.local
  gateways:
    - yas-gateway
  http:
    - match:
        - authority:
            exact: storefront.yas.local
          uri:
            prefix: /api
        - authority:
            exact: storefront.yas.local
          uri:
            prefix: /oauth2
        - authority:
            exact: storefront.yas.local
          uri:
            prefix: /login
        - authority:
            exact: storefront.yas.local
          uri:
            prefix: /logout
      route:
        - destination:
            host: storefront-bff.yas-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - authority:
            exact: storefront.yas.local
      route:
        - destination:
            host: storefront-ui.yas-dev.svc.cluster.local
            port:
              number: 3000
    - match:
        - authority:
            exact: backoffice.yas.local
          uri:
            prefix: /api
        - authority:
            exact: backoffice.yas.local
          uri:
            prefix: /oauth2
        - authority:
            exact: backoffice.yas.local
          uri:
            prefix: /login
        - authority:
            exact: backoffice.yas.local
          uri:
            prefix: /logout
      route:
        - destination:
            host: backoffice-bff.yas-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - authority:
            exact: backoffice.yas.local
      route:
        - destination:
            host: backoffice-ui.yas-dev.svc.cluster.local
            port:
              number: 3000
    - match:
        - authority:
            exact: swagger.yas.local
      route:
        - destination:
            host: swagger-ui.yas-dev.svc.cluster.local
            port:
              number: 8080
