k8s/istio/yas-dev-ingress-ui-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingressgateway-to-storefront-ui
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app: storefront-ui
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingressgateway-to-backoffice-ui
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app: backoffice-ui
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingressgateway-to-swagger-ui
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app: swagger-ui
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
